[caffeine] switch over from guava
Remove all other usages of guava